<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Green Leaf</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register_button">Register</string>
    <string name="login_button">Log In</string>
    <string name="username">Username</string>
	<string name="password">Password</string>
    <string name="welcome_screen">Welcome</string>
    <string name="login_note"></string>
    <string name="required">Required</string>
    <string name="limitation">A-Z  a-z  0-9  @  _  .</string>
</resources>
