<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold" />
    	

    <Button
        android:id="@+id/bRegister"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:background="#d2f4c6"
        android:text="@string/register_button" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/bRegister"
        android:layout_below="@+id/bRegister"
        android:layout_marginTop="20dp"
        android:background="#d2f4c6"
        android:text="@string/login_button" />

</RelativeLayout>